--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "arfinzz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mysql2": "^3.3.5",
     "sequelize": "^6.32.0"
