--- a/.gitignore
+++ b/.gitignore
@@ -3740,3 +3740,49 @@ node_modules/wrappy/LICENSE
 node_modules/wrappy/package.json
 node_modules/wrappy/README.md
 node_modules/wrappy/wrappy.js
+node_modules/buffer-equal-constant-time/.npmignore
+node_modules/buffer-equal-constant-time/.travis.yml
+node_modules/buffer-equal-constant-time/index.js
+node_modules/buffer-equal-constant-time/LICENSE.txt
+node_modules/buffer-equal-constant-time/package.json
+node_modules/buffer-equal-constant-time/README.md
+node_modules/buffer-equal-constant-time/test.js
+node_modules/ecdsa-sig-formatter/CODEOWNERS
+node_modules/ecdsa-sig-formatter/LICENSE
+node_modules/ecdsa-sig-formatter/package.json
+node_modules/ecdsa-sig-formatter/README.md
+node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.d.ts
+node_modules/ecdsa-sig-formatter/src/ecdsa-sig-formatter.js
+node_modules/ecdsa-sig-formatter/src/param-bytes-for-alg.js
+node_modules/jsonwebtoken/decode.js
+node_modules/jsonwebtoken/index.js
+node_modules/jsonwebtoken/LICENSE
+node_modules/jsonwebtoken/package.json
+node_modules/jsonwebtoken/README.md
+node_modules/jsonwebtoken/sign.js
+node_modules/jsonwebtoken/verify.js
+node_modules/jsonwebtoken/lib/asymmetricKeyDetailsSupported.js
+node_modules/jsonwebtoken/lib/JsonWebTokenError.js
+node_modules/jsonwebtoken/lib/NotBeforeError.js
+node_modules/jsonwebtoken/lib/psSupported.js
+node_modules/jsonwebtoken/lib/rsaPssKeyDetailsSupported.js
+node_modules/jsonwebtoken/lib/timespan.js
+node_modules/jsonwebtoken/lib/TokenExpiredError.js
+node_modules/jsonwebtoken/lib/validateAsymmetricKey.js
+node_modules/jsonwebtoken/node_modules/ms/index.js
+node_modules/jsonwebtoken/node_modules/ms/license.md
+node_modules/jsonwebtoken/node_modules/ms/package.json
+node_modules/jsonwebtoken/node_modules/ms/readme.md
+node_modules/jwa/index.js
+node_modules/jwa/LICENSE
+node_modules/jwa/package.json
+node_modules/jwa/README.md
+node_modules/jws/CHANGELOG.md
+node_modules/jws/index.js
+node_modules/jws/LICENSE
+node_modules/jws/package.json
+node_modules/jws/readme.md
+node_modules/jws/lib/data-stream.js
+node_modules/jws/lib/sign-stream.js
+node_modules/jws/lib/tostring.js
+node_modules/jws/lib/verify-stream.js
