--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "arfinzz",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1402.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
