--- a/.gitignore
+++ b/.gitignore
@@ -7328,3 +7328,38 @@ node_modules/xmlbuilder/lib/XMLTypeInfo.js
 node_modules/xmlbuilder/lib/XMLUserDataHandler.js
 node_modules/xmlbuilder/lib/XMLWriterBase.js
 node_modules/xmlbuilder/typings/index.d.ts
+node_modules/basic-auth/HISTORY.md
+node_modules/basic-auth/index.js
+node_modules/basic-auth/LICENSE
+node_modules/basic-auth/package.json
+node_modules/basic-auth/README.md
+node_modules/basic-auth/node_modules/safe-buffer/index.d.ts
+node_modules/basic-auth/node_modules/safe-buffer/index.js
+node_modules/basic-auth/node_modules/safe-buffer/LICENSE
+node_modules/basic-auth/node_modules/safe-buffer/package.json
+node_modules/basic-auth/node_modules/safe-buffer/README.md
+node_modules/helmet/CHANGELOG.md
+node_modules/helmet/index.cjs
+node_modules/helmet/index.d.cts
+node_modules/helmet/index.d.mts
+node_modules/helmet/index.mjs
+node_modules/helmet/LICENSE
+node_modules/helmet/package.json
+node_modules/helmet/README.md
+node_modules/helmet/SECURITY.md
+node_modules/morgan/HISTORY.md
+node_modules/morgan/index.js
+node_modules/morgan/LICENSE
+node_modules/morgan/package.json
+node_modules/morgan/README.md
+node_modules/morgan/node_modules/on-finished/HISTORY.md
+node_modules/morgan/node_modules/on-finished/index.js
+node_modules/morgan/node_modules/on-finished/LICENSE
+node_modules/morgan/node_modules/on-finished/package.json
+node_modules/morgan/node_modules/on-finished/README.md
+node_modules/on-headers/HISTORY.md
+node_modules/on-headers/index.js
+node_modules/on-headers/LICENSE
+node_modules/on-headers/package.json
+node_modules/on-headers/README.md
+access.log
