--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.3.5",
     "razorpay": "^2.8.6",
     "sequelize": "^6.32.0",
